Update index.ipynb with new analysis

--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -311,12 +311,13 @@
        "[53940 rows x 10 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# import pandas as pd, then read \"diamonds.csv\"\n",
     "import pandas as pd\n",
     "diamonds = pd.read_csv(\"diamonds.csv\", index_col=0)\n",
     "diamonds"
